Changelog
---------

Head
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Version 1.0b1 - October 2, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  Package changes

- Split out compiler to "Chameleon" package. [malthe]

  Backwards incompatibilities

- Moved contents of ``z3c.pt.macro`` module into
  ``z3c.pt.template``. [malthe]

- Namespace attribute "xmlns" no longer rendered for templates with no
  explicit document type. [malthe]
  
- Changes to template method signatures. [malthe]
  
- Engine now expects all strings to be unicode or contain ASCII
  characters only, unless an encoding is provided. [malthe]
  
- The default path traverser no longer proxies objects. [malthe]
  
- Template output is now always converted to unicode. [malthe]
  
- The ``ViewPageTemplateFile`` class now uses 'path' as the default
  expression type. [malthe]
  
- The compiler now expects an instantiated parser instance. [malthe]

  Features

- Added expression translator "provider:" (which renders a content
  provider as defined in the ``zope.contentprovider``
  package). [malthe]
  
- Added template API to render macros. [malthe]
  
- Optimized template loader so only a single template is instantiated
  per file. [malthe]
  
- Made ``z3c.pt`` a namespace package. [malthe]
  
- Added reduce and restore operation to the compilation and rendering
  flow in the test examples to verify integrity. [malthe]

- The ZPT parser now supports prefixed native attributes,
  e.g. <tal:foo tal:bar="" />. [malthe]
  
- Source-code is now written to disk in debug mode. [malthe]
  
- Custom validation error is now raised if inserted string does not
  validate (when debug mode is enabled). [malthe]

- Added support for omitting rendering of HTML "toggle" attributes
  (option's ``selected`` and input's ``checked``) within dynamic
  attribute assignment.  If the value of the expression in the
  assignment evaluates equal to boolean False, the attribute will not
  be rendered.  If the value of the expression in the assignment